<resources>
    <string name="app_name">TT</string>
    <string name="gestionar_usuarios">Gestionar usuarios</string>
    <string name="gestionar_adulto_mayor">Gestionar adulto mayor</string>
    <string name="monitoreo_de_temperatura">Monitoreo de temperatura</string>
    <string name="supervisi_n_adulto_mayor">Supervisión adulto mayor</string>
    <string name="control_de_iluminaci_n">Control de iluminación</string>
    <string name="logo">TODO</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="title_activity_login">TT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_rec_password">Recuperar contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Usuario y/o contraseña incorrecto</string>
    <string name="error_field_required">Falta este campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="logotipo">TODO</string>

    <string name="nombre_adulto_mayor">Nombre adulto mayor</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="sexo">Sexo</string>
    <string name="agregar_foto">Agregar foto</string>
    <string name="agregar_fotograf_a">Agregar fotografía</string>
    <string name="enfermedades">Enfermedades</string>
    <string name="enfermedad">Enfermedad</string>
    <string name="enfermedad_AM">Enfermedad</string>
    <string name="enfermedadText">enfermedad</string>
    <string name="fecha_AE">Fecha de nacimiento</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="n_mero_telefonico">Número telefonico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="comedor">Comedor</string>
    <string name="estudio">Estudio</string>
    <string name="dormitorio">Dormitorio             </string>
    <string name="dormitorio_2">Dormitorio 2          </string>
    <string name="sala">Sala        </string>
    <string name="ba_o">Baño        </string>
    <string name="visualizar_ritmo_registro">visualizar registro ritmo cardíaco</string>
    <string name="visualizar_temperatura_registro">visualizar registro temperatura</string>
    <string name="localizacion">localización</string>
    <string name="notificaciones">notificaciones</string>
    <string name="temperatura_corporal">Temperatura corporal</string>
    <string name="ritmo_cardiaco">Ritmo cardiaco</string>
    <string name="supervisi_n_adulto_mayor_title">Supervisión Adulto Mayor</string>
    <string name="menu_principal">Menu principal</string>
    <string name="registrar_adulto_mayor">Registrar adulto mayor</string>
    <string name="registrar_encargado">Registrar encargado</string>
    <string name="Registrar_enfermedades_btn">Registrar enfermedades</string>
    <string name="input_nombre_enfermedad">Enfermedad</string>
    <string name="agregar_enfermedad">Agregar enfermedad</string>
    <string name="cancel_enfermedad">cancelar</string>
    <string name="save_enfermedad">Guardar</string>
    <string name="title_activity_mostrat_adultos_encargados">mostratAdultosEncargados</string>
    <string name="title_activity_main">TT</string>
    <string name="title_activity_mostrar_am">mostrarAM</string>
    <string name="nombreAE">Nombre</string>
    <string name="valor">Valor</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="prueba">prueba</string>
    <string name="ipconfig">http://192.168.1.74:5000/api/v1/</string>
    <string name="eliminar">Eliminar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">date</string>
    <string name="type">tipo</string>
    <string name="todo">logo_login</string>


</resources>
