<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="horizontal">


    <TextView
        android:id="@+id/fecha_register"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fecha"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/fecha" />

    <TextView
        android:id="@+id/hora_register"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hora"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/hora" />

    <TextView
        android:id="@+id/valor_register"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valor"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/valor" />

    <TextView
        android:id="@+id/name_register"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="Nombre" />

</LinearLayout>