<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.conke.tt.registrarAdulto">


    <RadioGroup
        android:id="@+id/sexo_AM"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <RadioButton
            android:id="@+id/sexM"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/sexF"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/femenino" />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="361dp"
        android:layout_height="278dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LayoutNombreAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/nombreAM"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/selFec"
                android:layout_marginTop="13dp"
                android:hint="@string/nombre_adulto_mayor"
                android:inputType="text"
                android:text="@string/nombre_adulto_mayor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LayoutApellidoPaternoAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LayoutNombreAM">

            <EditText
                android:id="@+id/apellidoPaternoAM"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/selFec"
                android:layout_marginTop="13dp"
                android:hint="@string/apellido_paterno"
                android:inputType="text"
                android:text="@string/apellido_paterno" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LayoutapellidoMaternoAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/apellidoMaternoAM"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/selFec"
                android:layout_marginTop="13dp"
                android:hint="@string/apellido_materno"
                android:inputType="text"
                android:text="@string/apellido_materno" />

        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/fecha_AM"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="19dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:labelFor="@id/fecha_AM"
            android:maxLines="1"
            android:text="@string/fecha_de_nacimiento"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="232dp" />

        <ImageButton
            android:id="@+id/selFec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:imeOptions="actionNext"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/baseline_calendar_today_black_18dp2"
            tools:ignore="ContentDescription" />




    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo_AM">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="64dp"
            android:layout_toEndOf="@+id/foto_AM"
            android:text="@string/agregar_fotograf_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ImageButton
            android:id="@+id/foto_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/baseline_camera_alt_black_18dp2"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <Button
        android:id="@+id/Registrar"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        android:background="@color/colorBoton"
        android:text="@string/registrar"
        android:textColor="@color/colorTexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
