<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.conke.tt.registro_adulto_encargado">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_registrar_encargado"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textColor="@color/colorTexto"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/title_registrar_encargado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/registrar_encargado"
            android:textColor="#fff"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="11dp" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="371dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/nombreAE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nombreAE"
            android:inputType="textPersonName"
            android:labelFor="@id/nombreAE" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="371dp"
        android:layout_height="65dp"
        android:layout_marginBottom="381dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


        <EditText
            android:id="@+id/apellidoPaternoAE"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/apellido_paterno"
            android:inputType="textPersonName"
            android:labelFor="@id/apellidoPaternoAE" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="371dp"
        android:layout_height="65dp"
        android:layout_marginBottom="317dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">


        <EditText
            android:id="@+id/apellidoMaternoAE"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/apellido_materno"
            android:inputType="textPersonName"
            android:labelFor="@id/apellidoMaternoAE" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="346dp"
        android:layout_height="52dp"
        android:layout_marginBottom="265dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <EditText
            android:id="@+id/fecha_AE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:focusable="false"
            android:ems="10"
            android:inputType="date"
            android:labelFor="@id/fecha_AE"
            android:text="@string/fecha_AE" />

        <ImageButton
            android:id="@+id/selFAE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/fecha_AE"
            android:layout_marginEnd="66dp"
            android:layout_toStartOf="@+id/fecha_AE"
            app:srcCompat="@drawable/baseline_calendar_today_black_18dp2"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="371dp"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">


        <EditText
            android:id="@+id/correoAE"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:labelFor="@id/correoAE" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="371dp"
        android:layout_height="0dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">


        <EditText
            android:id="@+id/numeroAE"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/n_mero_telefonico"
            android:inputType="phone"
            android:labelFor="@id/numeroAE" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="371dp"
        android:layout_height="0dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/passwordAE"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:labelFor="@id/passwordAE" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/sexo_AE"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <TextView
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <RadioButton
            android:id="@+id/sexMAE"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getSexoAE"
            android:text="@string/masculino" />



        <RadioButton
            android:id="@+id/sexFAE"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getSexoAE"
            android:text="@string/femenino" />

    </RadioGroup>


    <LinearLayout
        android:id="@+id/eliminarAE_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo_AE">


        <Button
            android:id="@+id/eliminarAE"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBoton"
            android:gravity="center"
            android:text="@string/eliminar"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorTexto"
            android:visibility="visible"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="508dp"
            tools:text="Eliminar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="28dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eliminarAE_form"
        app:layout_constraintTop_toBottomOf="@+id/sexo_AE">


        <Button
            android:id="@+id/RegistrarAE"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBoton"
            android:gravity="center"
            android:text="@string/registrar"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorTexto"
            tools:layout_editor_absoluteY="508dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/id_AE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="360dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="532dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
